@@ -7,6 +7,9 @@
 # DON'T EDIT THIS!
 set -e
 
-tmpFile=$(mktemp --suffix=.jar)
-kotlinc "$(dirname $0)/app/main.kt" -include-runtime -d "$tmpFile"
-exec kotlin -classpath "$tmpFile" MainKt "$@"
+tmpFile=$(mktemp)
+
+# The JAVA_OPTS here prevents a warning on 1.4, see: https://youtrack.jetbrains.com/issue/KT-43704#focus=Comments-27-4625141.0-0
+JAVA_OPTS="--add-opens java.base/java.util=ALL-UNNAMED" kotlinc "$(dirname $0)/app/main.kt" -include-runtime -d "${tmpFile}.jar"
+
+exec kotlin -classpath "${tmpFile}.jar" MainKt "$@"
